[gd_scene load_steps=15 format=3 uid="uid://bb8865dyaan5g"]

[ext_resource type="Script" path="res://Script/Player.gd" id="1_xng4y"]
[ext_resource type="PackedScene" uid="uid://dgmm628u2bk1p" path="res://Scenes/viewmodelcamera.tscn" id="2_8fvum"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ex2vj"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ln7ew"]

[sub_resource type="Animation" id="Animation_bm7ib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hinrc"]
resource_name = "crouchanim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.97, 0.545, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.440007, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bj8k5"]
resource_name = "upanim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.97, 0.545, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.44, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_edqoi"]
_data = {
"RESET": SubResource("Animation_bm7ib"),
"crouchanim": SubResource("Animation_hinrc"),
"upanim": SubResource("Animation_bj8k5")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_omty0"]
height = 1.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xrlpq"]

[sub_resource type="Animation" id="Animation_cai62"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.002, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ra25c"]
resource_name = "jumping"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.002, 0, 0), Vector3(0.002, -0.1, 0), Vector3(0.002, 0, 0)]
}

[sub_resource type="Animation" id="Animation_j0nad"]
resource_name = "landing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.002, 0, 0), Vector3(0.002, -0.1, 0), Vector3(0.002, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x48ln"]
_data = {
"RESET": SubResource("Animation_cai62"),
"jumping": SubResource("Animation_ra25c"),
"landing": SubResource("Animation_j0nad")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(0.91412, 0, 0, 0, 0.91412, 0, 0, 0, 0.91412, 0.00554252, -0.252157, 0.0302081)
script = ExtResource("1_xng4y")

[node name="stand_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24665, 0)
shape = SubResource("CapsuleShape3D_ex2vj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="stand_collision_shape"]
mesh = SubResource("CapsuleMesh_ln7ew")

[node name="Crouchinganimations" type="AnimationPlayer" parent="stand_collision_shape/MeshInstance3D"]
libraries = {
"": SubResource("AnimationLibrary_edqoi")
}
speed_scale = 2.0
movie_quit_on_finish = true

[node name="crouch_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00420094, 0.844225, -0.00180805)
shape = SubResource("CapsuleShape3D_omty0")
disabled = true

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.249204, 0)
target_position = Vector3(0, 1.8, 0)

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Head" type="Node3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.001, 0, -0.002)

[node name="eyes" type="Node3D" parent="Neck/Head"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head/eyes"]
transform = Transform3D(1.09395, 0, 0, 0, 1.09395, 0, 0, 0, 1.09395, 0.002, 0, 0)
cull_mask = 1048569

[node name="Area3D" type="Area3D" parent="Neck/Head/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.22397, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Neck/Head/eyes/Camera3D/Area3D"]
shape = SubResource("CylinderShape3D_xrlpq")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Neck/Head/eyes/Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="Neck/Head/eyes/Camera3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="viewmodelcamera" parent="Neck/Head/eyes/Camera3D/SubViewportContainer/SubViewport" instance=ExtResource("2_8fvum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.322051, 1.3788, 0)
cull_mask = 2
near = 0.001

[node name="AnimationJump" type="AnimationPlayer" parent="Neck/Head/eyes"]
libraries = {
"": SubResource("AnimationLibrary_x48ln")
}
